--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,7 @@
         "datePublished": "2014-04-09 00:00:00 \x2b0000 UTC",
         "dateModified" : "2014-04-09 00:00:00 \x2b0000 UTC",
         "url" : "\/about\/",
-        "wordCount" : "151",
+        "wordCount" : "150",
         "keywords" : [ "Blog" ]
     }
     </script>
@@ -101,6 +101,19 @@
 
 
       
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	ga('create', 'UA-163019700-1', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+
     </head>
     <body>
 
@@ -246,7 +259,7 @@
       <p>I&rsquo;m Shon, a local boy from the island of Hawaii who moved across the country to pursue my passion for data. I am an aspiring data scientist who has experience performing data manipulation, data visualization, exploratory data analysis, automation, statistics, and machine learning in R, Python, and SQL.</p>
 <p>I attended the University of California, Santa Barbara and graduated with a Bachelor&rsquo;s degree in Statistics in 2018. It was there in university where I joined <a href="https://datascienceucsb.org/">Data Science at UCSB</a> and discovered my passion for the field of data.</p>
 <p>Most recently, I was a Content Quality Data Analyst at <a href="https://www.datacamp.com/">DataCamp</a>, where I worked with instructors to improve their course ratings by analyzing student feedback and engagement data.</p>
-<p>I currently live in New York and am looking for opportunities as a data analyst. Add me on <a href="https://www.linkedin.com/in/shoninouye/">LinkedIn</a> or send me an <a href="mailto:shoninouye@gmail.com">email</a> if you&rsquo;d like to connect!</p>
+<p>I currently live in New York and am looking for opportunities as a data analyst/scientist. Check me out on <a href="https://github.com/shoninouye">Github</a> and add me on <a href="https://www.linkedin.com/in/shoninouye/">LinkedIn</a> or send me an <a href="mailto:shoninouye@gmail.com">email</a> if you&rsquo;d like to connect!</p>
 
     </div>
   </article>
