--- a/index.html
+++ b/index.html
@@ -517,6 +517,7 @@ artist_polls %&gt;%
        y = &quot;Number of critics&quot;)</code></pre>
 <p><img src="/blog/2020-04-17-tidy-tuesday-analysis-hip-hop-ratings_files/figure-html/unnamed-chunk-12-1.png" width="672" /></p>
 <p>Given the fact that hip-hop originated and developed in the United States, it is not surprising that the majority of the critics polled were from there. This does give a bit more context to the statement “We polled 108 critics from 15 countries across six continents” by the BBC. It is interesting to see critics from countries that I hadn’t expected, such as China, Japan, India, and Russia.</p>
+<p><a href="https://github.com/shoninouye/tidytuesday-analysis/tree/master/2020/week_16">Check out the code for this project on GitHub!</a></p>
 </div>
 </div>
 
